--- a/src/styles/components/_user-input.scss
+++ b/src/styles/components/_user-input.scss
@@ -4,6 +4,7 @@
 
   .label {
     margin-bottom: 5px;
+    padding-left: 10px;
   }
 
   .input {
@@ -11,5 +12,7 @@
     height: 40px;
     border-radius: 5px;
     border: 2px solid $main-color;
+    padding-left: 20px;
+    font-size: 16px;
   }
 }
