Add game page basic styling

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,6 +4,8 @@
 
 //COMPONENTS
 @import './components/user-input';
+@import './components/game-board';
 
 //PAGES
 @import './pages/landing';
+@import './pages/game';
