Add basic winning logic to game board

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,7 +5,9 @@
 //COMPONENTS
 @import './components/user-input';
 @import './components/game-board';
+@import './components/shared/shared-button';
 
 //PAGES
 @import './pages/landing';
 @import './pages/game';
+@import './pages/scoreboard';
