--- a/src/styles/components/_user-input.scss
+++ b/src/styles/components/_user-input.scss
@@ -1,18 +1,18 @@
 .user-input-container {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 
-  .label {
-    margin-bottom: 5px;
-    padding-left: 10px;
-  }
+	.label {
+		margin-bottom: 5px;
+		padding-left: 10px;
+	}
 
-  .input {
-    width: 300px;
-    height: 40px;
-    border-radius: 5px;
-    border: 2px solid $main-color;
-    padding-left: 20px;
-    font-size: 16px;
-  }
+	.input {
+		width: 300px;
+		height: 40px;
+		border-radius: 5px;
+		border: 2px solid $main-color;
+		text-align: center;
+		font-size: 16px;
+	}
 }
