--- a/src/styles/components/_game-board.scss
+++ b/src/styles/components/_game-board.scss
@@ -16,33 +16,62 @@
         left: 0;
         width: 100%;
         height: 100%;
+        border-radius: 5px;
       }
 
       .front {
         display: flex;
         align-items: center;
         justify-content: center;
-        z-index: 1;
 
-        &.visible {
-          z-index: 10;
+        &.flip-in {
+          transform-style: preserve-3d;
+          animation: flip-out 0.5s;
         }
       }
 
       .back {
-        z-index: 1;
         img {
           height: 100%;
         }
 
-        &.visible {
-          z-index: 10;
+        &.flip-in {
+          animation: flip-in 0.5s;
         }
-      }
 
-      &:hover {
-        cursor: pointer;
-        box-shadow: 0px 0px 20px 0px rgba(255,165,0,1);
+        &:hover {
+          cursor: pointer;
+          box-shadow: 0px 0px 20px 0px rgba(255,165,0,1);
+        }
       }
     }
 }
+
+@keyframes flip-in {
+  0% {
+    transform: rotateY(0);
+  }
+
+  50% {
+    transform: rotateY(90deg);
+  }
+
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+@keyframes flip-out {
+  0% {
+    transform: rotateY(0);
+  }
+
+  50% {
+    transform: rotateY(-90deg);
+  }
+
+  100% {
+    transform: rotateY(-180deg);
+  }
+}
+
