Style scoreboard page

--- a/src/styles/pages/_scoreboard.scss
+++ b/src/styles/pages/_scoreboard.scss
@@ -3,8 +3,13 @@
   flex-direction: column;
   align-items: center;
 
-  .username {
-    font-size: 40px;
+  .header {
+    font-size: 50px;
+    margin-bottom: 30px;
+  }
+
+  .subheader {
+    font-size: 30px;
   }
 
   .score {
